--- a/views/tour.pug
+++ b/views/tour.pug
@@ -7,6 +7,7 @@ mixin overviewBox(label, text, icon)
     span.overview-box__label= label
     span.overview-box__text= text
 
+
 block content 
   section.section-header
     .header__hero
@@ -15,7 +16,7 @@ block content
 
     .heading-box
       h1.heading-primary
-        span= tour.name
+        span= `${tour.name} tour`
       .heading-box__group
         .heading-box__detail
           svg.heading-box__icon
@@ -32,42 +33,38 @@ block content
         .overview-box__group
           h2.heading-secondary.ma-bt-lg Quick facts
 
-          - const date = tour.startDates[0].toLocaleString("en-US", {
-            year: "numeric", month: "long", day: "numeric"})
-            
-            +overviewBox("Next date", date, 'calendar')
-            +overviewBox("Difficulty", tour.difficulty, 'trending-up')
-            +overviewBox("Participants", `${tour.maxGroupSize} people`, 'user')
-            +overviewBox("Rating", `${tour.raingsAverage} / 5`, 'star')
+          - const date = tour.startDates[0].toLocaleString('en-us', { month: 'long', year: 'numeric'})
+          +overviewBox("Next date", date, 'calendar')
+          +overviewBox("Difficulty", tour.difficulty, 'trending-up')
+          +overviewBox("Participants", `${tour.maxGroupSize} people`, 'user')
+          +overviewBox("Rating", `${tour.ratingsAverage} / 5`, 'star')
+
           
 
+          
         .overview-box__group
           h2.heading-secondary.ma-bt-lg Your tour guides
-          .overview-box__detail
-            img.overview-box__img(src='/img/users/user-19.jpg', alt='Lead guide')
-            span.overview-box__label Lead guide
-            span.overview-box__text Steven Miller
-          .overview-box__detail
-            img.overview-box__img(src='/img/users/user-18.jpg', alt='Tour guide')
-            span.overview-box__label Tour guide
-            span.overview-box__text Lisa Brown
-          .overview-box__detail
-            img.overview-box__img(src='/img/users/user-17.jpg', alt='Intern')
-            span.overview-box__label Intern
-            span.overview-box__text Max Smith
-
+          each guide in tour.guides
+            .overview-box__detail
+              img.overview-box__img(src=`/img/users/${guide.photo}`, alt=`${guide.name}`)
+              - if(guide.role === 'lead-guide')
+                span.overview-box__label Lead guide
+              - if(guide.role === 'guide')
+                span.overview-box__label Tour guide
+              span.overview-box__text= guide.name
+            
+            
     .description-box
-      h2.heading-secondary.ma-bt-lg About the park camper tour
-      p.description__text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-      p.description__text Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum!
+      h2.heading-secondary.ma-bt-lg= `About ${tour.name} tour`
+      - const paragraphs = tour.description.split('\n')
+      each p in paragraphs
+        p.description__text= p
 
   section.section-pictures
-    .picture-box
-      img.picture-box__img.picture-box__img--1(src='/img/tour-5-1.jpg', alt='The Park Camper Tour 1')
-    .picture-box
-      img.picture-box__img.picture-box__img--2(src='/img/tour-5-2.jpg', alt='The Park Camper Tour 1')
-    .picture-box
-      img.picture-box__img.picture-box__img--3(src='/img/tour-5-3.jpg', alt='The Park Camper Tour 1')
+    each image, i in tour.images
+      .picture-box
+        img.picture-box__img(src=`/img/tours/${image}`, alt=`The Park Camper Tour ${i+1}`, class=`picture-box__img--${i + 1}`)
+      
 
   section.section-map
     #map
