--- a/views/tour.pug
+++ b/views/tour.pug
@@ -1,4 +1,14 @@
 extends base
+include reviewCard
+
+block append head
+  link(rel='stylesheet' href='https://unpkg.com/leaflet@1.6.0/dist/leaflet.css')
+  script(src='https://unpkg.com/leaflet@1.6.0/dist/leaflet.js')
+  script(src='/js/leaflet.js' defer)
+
+  
+
+
 
 mixin overviewBox(label, text, icon)
   .overview-box__detail
@@ -39,9 +49,9 @@ block content
           +overviewBox("Participants", `${tour.maxGroupSize} people`, 'user')
           +overviewBox("Rating", `${tour.ratingsAverage} / 5`, 'star')
 
-          
 
-          
+
+
         .overview-box__group
           h2.heading-secondary.ma-bt-lg Your tour guides
           each guide in tour.guides
@@ -52,8 +62,8 @@ block content
               - if(guide.role === 'guide')
                 span.overview-box__label Tour guide
               span.overview-box__text= guide.name
-            
-            
+
+
     .description-box
       h2.heading-secondary.ma-bt-lg= `About ${tour.name} tour`
       - const paragraphs = tour.description.split('\n')
@@ -64,38 +74,27 @@ block content
     each image, i in tour.images
       .picture-box
         img.picture-box__img(src=`/img/tours/${image}`, alt=`The Park Camper Tour ${i+1}`, class=`picture-box__img--${i + 1}`)
-      
+
 
   section.section-map
-    #map
+    #map(data-locations=`${JSON.stringify(tour.locations)}`)
 
   section.section-reviews
     .reviews
+      each review in tour.reviews
+        +reviewCard(review) 
 
-      .reviews__card
-        .reviews__avatar
-          img.reviews__avatar-img(src='/img/users/user-7.jpg', alt='Jim Brown')
-          h6.reviews__user Jim Brown
-        p.reviews__text Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque dignissimos sint quo commodi corrupti accusantium veniam saepe numquam.
-        .reviews__rating
-          svg.reviews__star.reviews__star--active
-            use(xlink:href='/img/icons.svg#icon-star')
-          svg.reviews__star.reviews__star--active
-            use(xlink:href='/img/icons.svg#icon-star')
-          svg.reviews__star.reviews__star--active
-            use(xlink:href='/img/icons.svg#icon-star')
-          svg.reviews__star.reviews__star--active
-            use(xlink:href='/img/icons.svg#icon-star')
-          svg.reviews__star.reviews__star--active
-            use(xlink:href='/img/icons.svg#icon-star')
 
   section.section-cta
     .cta
       .cta__img.cta__img--logo
         img(src='/img/logo-white.png', alt='Natours logo')
-      img.cta__img.cta__img--1(src='/img/tour-5-2.jpg', alt='')
-      img.cta__img.cta__img--2(src='/img/tour-5-1.jpg', alt='')
+      img.cta__img.cta__img--1(src=`/img/tours/${tour.images[1]}`, alt='Tour picture')
+      img.cta__img.cta__img--2(src=`/img/tours/${tour.images[2]}`, alt='Tour picture')
       .cta__content
         h2.heading-secondary What are you waiting for?
-        p.cta__text 10 days. 1 adventure. Infinite memories. Make it yours today!
+        p.cta__text= `${tour.duration} days. 1 adventure. Infinite memories. Make it yours today!`
         button.btn.btn--green.span-all-rows Book tour now!
+
+
+        
