--- a/views/login.pug
+++ b/views/login.pug
@@ -4,7 +4,7 @@ block content
   main.main
     .login-form
       h2.heading-secondary.ma-bt-lg Login to your account
-      form.form
+      form.form.form--login
         .form__group
           label.form__label(for='email') Email address
           input#email.form__input(type='email', placeholder='you@example.com', required)
@@ -14,4 +14,3 @@ block content
         .form__group
           button.btn.btn--green Login
   
-  //- script(src='/js/login.js')
