--- a/views/account.pug
+++ b/views/account.pug
@@ -4,7 +4,7 @@ mixin navItem(link, text, icon, active)
   li(class=`${active ? "side-nav--active" : ""}`)
     a(href=`${link}`)
       svg
-        use(xlink:href=`img/icons.svg#icon-${iconId}`)
+        use(xlink:href=`img/icons.svg#icon-${icon}`)
       | #{text}
 
 
@@ -14,7 +14,7 @@ block content
       nav.user-view__menu
         ul.side-nav
           +navItem('#','Settings', 'settings', true)
-          +navItem('#','My bookings', 'briefcase')
+          +navItem('my-tours','My bookings', 'briefcase')
           +navItem('#','My reviews', 'star')
           +navItem('#','Billing', 'credit-card' )
           
